2008-03-18  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c:
    * src/ccm.h: Expose find window functions, add activate window function
    * src/ccm-window.c:
    * src/ccm-window.h: Set default window type to normal
    * plugins/mosaic/ccm-mosaic.c: Include only normal window.
    
2008-03-17  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac: Add libgtop depends
    * plugins/perf/ccm-perf.c: Show cpu and memory load average.
    * src/ccm-image.c: Fix a shm memory leak.
    * src/ccm-region.c:
    * src/ccm-region.h: Use _cairo_lround instead round and add debug function
                        _ccm_region_print.
    * src/ccm-window.c: Detroy pixmap when window is unmapped to preserve
                        memory.

2008-03-13  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-image.c: Repair all damage region on repair.
    
2008-03-12  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac: disable c99 check for now.
    * plugins/Makefile.am:
    * plugins/perf/Makefile.am:
    * plugins/perf/ccm-perf.c:
    * plugins/perf/ccm-perf.h:
    * plugins/perf/ccm-perf.plugin.desktop.in:
    * plugins/perf/ccm-perf.schemas.in:
    * src/ccm-screen.c: Move performance check in a plugin, for now only check
                        FPS.

2008-03-10  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/mosaic/ccm-mosaic.c:
    * src/ccm-display.c:
    * src/ccm-pixmap-glitz.c:
    * src/ccm-pixmap-image.c:
    * src/ccm-pixmap.c:
    * src/ccm-screen.c:
    * src/ccm-window-glitz.c:
    * src/ccm-window-xrender.c:
    * src/ccm-window.c: Fix some fallback cases

2008-03-06  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-glitz.c: Use new api for bind tex image.

2008-03-04  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-glitz.c: Bind tex image directly instead damage texture.
    