@@ -1,3 +1,12 @@
+2008-03-19  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+    * plugins/shadow/ccm-shadow.c:
+    * src/ccm-display.c:
+    * src/ccm-display.h:
+    * src/ccm-pixmap-glitz.c:
+    * src/ccm-pixmap.c:
+    * src/ccm-window.c: Handle better Xerror event.
+
 2008-03-18  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
     * src/ccm-screen.c:
